--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-slate-50 text-slate-800 overflow-hidden h-screen w-screen flex flex-col">
     <div id="root" class="flex flex-col h-full w-full"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="./index.tsx"></script>
 </body>
 </html>
